--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!--IMAGEM-->>
             </div>
-            <div id="forumlario">
+            <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post"></form>
